--- a/VAKidney/app/src/main/res/layout/item_grid_food.xml
+++ b/VAKidney/app/src/main/res/layout/item_grid_food.xml
@@ -12,14 +12,27 @@
         android:background="@drawable/bg_white_rounded"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/image"
+        <FrameLayout
+            android:clickable="false"
+            android:focusable="false"
             android:layout_width="match_parent"
-            android:layout_height="101dp"
-            android:layout_margin="2dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/profile_bg"
-            android:background="@drawable/bg_white_rounded" />
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="101dp"
+                android:layout_margin="2dp"
+                android:background="@drawable/bg_white_rounded"
+                android:scaleType="centerCrop"
+                android:visibility="gone" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/mealDrugImageRecycler"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,9 +48,9 @@
                 android:layout_marginLeft="@dimen/app_standard_padding"
                 android:layout_marginRight="2dp"
                 android:layout_weight="1"
+                android:background="@drawable/bg_white_rounded"
                 android:scaleType="centerCrop"
-                android:src="@drawable/profile_bg"
-                android:background="@drawable/bg_white_rounded" />
+                android:src="@drawable/profile_bg" />
 
             <ImageView
                 android:layout_width="match_parent"
@@ -45,9 +58,9 @@
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="@dimen/app_standard_padding"
                 android:layout_weight="1"
+                android:background="@drawable/bg_white_rounded"
                 android:scaleType="centerCrop"
-                android:src="@drawable/profile_bg"
-                android:background="@drawable/bg_white_rounded" />
+                android:src="@drawable/profile_bg" />
         </LinearLayout>
 
         <LinearLayout
@@ -64,9 +77,9 @@
                 android:layout_marginLeft="@dimen/app_standard_padding"
                 android:layout_marginRight="2dp"
                 android:layout_weight="1"
+                android:background="@drawable/bg_white_rounded"
                 android:scaleType="centerCrop"
-                android:src="@drawable/profile_bg"
-                android:background="@drawable/bg_white_rounded" />
+                android:src="@drawable/profile_bg" />
 
             <ImageView
                 android:layout_width="match_parent"
@@ -74,9 +87,9 @@
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="@dimen/app_standard_padding"
                 android:layout_weight="1"
+                android:background="@drawable/bg_white_rounded"
                 android:scaleType="centerCrop"
-                android:src="@drawable/profile_bg"
-                android:background="@drawable/bg_white_rounded" />
+                android:src="@drawable/profile_bg" />
         </LinearLayout>
 
         <LinearLayout
